[project]
name = "oddsblaze"
dynamic = ["version"]
description = "Python Oddsblaze SDK"
readme = "README.md"
authors = [
    { name = "reecetec", email = "reece.tec@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=75.6.0", "setuptools-scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocs-jupyter>=0.25.1",
]
