[project]
name = "oddsblaze"
dynamic = ["version"]
description = "Python Oddsblaze SDK"
readme = "README.md"
authors = [
    { name = "reecetec", email = "reece.tec@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>2",
    "pydantic-settings>2",
]

[build-system]
requires = ["setuptools>=75.6.0", "setuptools-scm>=8.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
docs = [
    "griffe-pydantic>=1.1.8",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]
